--- a/routes.yml
+++ b/routes.yml
@@ -1,4 +1,4 @@
 ---
 slack_code_monkeys: https://discordapp.com/api/webhooks/599597883385446440/r1r9G_9pSeaDUkd2NRcMpPM6W0PhDtWFGzcFE6flQl-m-LfOF9QcowJhkZbzhpjw04IT
-john_smiths_master: https://example.com/another/one/url
+john_smiths_master: https://webhook.site/4ef8e77e-c16f-4c81-8f70-af1874f50b6a
 
