--- a/testdata/integration/rules.yml
+++ b/testdata/integration/rules.yml
@@ -1,9 +1,4 @@
-#always : http://localhost:8080/always
-#filter1: http://localhost:8080/filter1
-#filter2: http://localhost:8080/filter2
-#filter3: http://localhost:8080/filter3
-#never: http://localhost:8080/never
-
+### 1
 - name: All except never with single rule
   headers:
     TEST_NUMBER: "1"
@@ -15,8 +10,8 @@
     - filter2
     - filter3
 
-###
-- name: All except never with 4 rules 1
+### 2
+- name: All except never with 4 rules, rule 1
   headers:
     TEST_NUMBER: "2"
   when: True
@@ -24,7 +19,7 @@
   routes:
     - always
 
-- name: All except never with 4 rules 2
+- name: All except never with 4 rules, rule 2
   headers:
     TEST_NUMBER: "2"
   when: True
@@ -32,7 +27,7 @@
   routes:
     - filter1
 
-- name: All except never with 4 rules 3
+- name: All except never with 4 rules, rule 3
   headers:
     TEST_NUMBER: "2"
   when: True
@@ -40,7 +35,7 @@
   routes:
     - filter2
 
-- name: All except never with 4 rules 4
+- name: All except never with 4 rules, rule 4
   headers:
     TEST_NUMBER: "2"
   when: True
@@ -48,8 +43,8 @@
   routes:
     - filter3
 
-###
-- name: Always and filter1 by filtering with done 1
+### 3
+- name: Always and filter1 by filtering with done, rule 1
   headers:
     TEST_NUMBER: "3"
   when: True
@@ -57,7 +52,7 @@
   routes:
     - always
 
-- name: Always and filter1 by filtering with done 2
+- name: Always and filter1 by filtering with done, rule 2
   headers:
     TEST_NUMBER: "3"
   when: True
@@ -66,7 +61,7 @@
     - filter1
   done: True
 
-- name: Always and filter1 by filtering with done 3
+- name: Always and filter1 by filtering with done, rule 3
   headers:
     TEST_NUMBER: "3"
   when: True
@@ -74,7 +69,7 @@
   routes:
     - filter2
 
-- name: Always and filter1 by filtering with done 4
+- name: Always and filter1 by filtering with done, rule 4
   headers:
     TEST_NUMBER: "3"
   when: True
@@ -82,7 +77,7 @@
   routes:
     - filter3
 
-- name: Always and filter1 by filtering with done 5
+- name: Always and filter1 by filtering with done, rule 5
   headers:
     TEST_NUMBER: "3"
   when: True
@@ -90,4 +85,49 @@
   routes:
     - never
 
+### 4
+- name: Always and filter1 by filtering with headers, rule 1
+  headers:
+    TEST_NUMBER: "4"
+    filtering_header: "1"
+  when: True
+  template: without_template.j2
+  routes:
+    - always
+
+- name: Always and filter1 by filtering with headers, rule 1
+  headers:
+    TEST_NUMBER: "4"
+    filtering_header: "1"
+  when: True
+  template: without_template.j2
+  routes:
+    - filter1
+
+- name: Always and filter1 by filtering with headers, rule 1
+  headers:
+    TEST_NUMBER: "4"
+    filtering_header: "2"
+  when: True
+  template: without_template.j2
+  routes:
+    - filter2
+
+- name: Always and filter1 by filtering with headers, rule 1
+  headers:
+    TEST_NUMBER: "4"
+    filtering_header: "3"
+  when: True
+  template: without_template.j2
+  routes:
+    - filter3
+
+- name: Always and filter1 by filtering with headers, rule 1
+  headers:
+    TEST_NUMBER: "4"
+    filtering_header: "4"
+  when: True
+  template: without_template.j2
+  routes:
+    - never
 
